feat-add ne enpoints for inverntry managment